--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <body class="antialiased">
     <div id="renderer-container"></div>
 
-    <div class="container mx-auto p-4 lg:p-8 min-h-screen flex flex-col gap-8">
+    <div class="container mx-auto p-4 lg:p-8 min-h-screen flex flex-col gap-8 max-w-7xl">
         
         <!-- App Title -->
         <div class="text-center">
