--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
         
         <!-- App Title -->
         <div class="text-center">
-            <h1 class="text-3xl md:text-4xl font-bold glowing-text-teal">The Intergalactic IEM Sonic Spectrometer</h1>
+            <h1 class="text-4xl md:text-5xl font-bold glowing-text-teal">The Intergalactic IEM Sonic Spectrometer</h1>
         </div>
 
         <!-- Top Section: Genres -->
         <div class="glass-panel rounded-2xl p-6 w-full">
-            <h2 class="text-2xl font-bold mb-4 text-center glowing-text-purple">Select your Genre</h2>
+            <h2 class="text-3xl font-bold mb-4 text-center glowing-text-purple">Select your Genre</h2>
             <div id="genre-grid" class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-7 gap-3 text-center">
                 <!-- Genre buttons will be injected here -->
             </div>
@@ -118,33 +118,33 @@
             <!-- Left Panel: Controls and Info -->
             <div class="w-full lg:w-1/3 flex flex-col gap-8">
                 <div class="glass-panel rounded-2xl p-6">
-                    <h1 class="text-2xl font-bold glowing-text-purple mb-4">IEM Mode Select</h1>
+                    <h1 class="text-3xl font-bold glowing-text-purple mb-4">IEM Mode Select</h1>
                     <div class="flex items-center justify-between p-4 rounded-lg bg-neutral-900/50">
-                        <span id="monitor-label" class="font-bold text-teal-300">MONITOR</span>
+                        <span id="monitor-label" class="font-bold text-teal-300 text-lg">MONITOR</span>
                         <label class="switch">
                             <input type="checkbox" id="mode-switch">
                             <span class="slider"></span>
                         </label>
-                        <span id="pop-label" class="text-neutral-500">POP</span>
+                        <span id="pop-label" class="text-neutral-500 text-lg">POP</span>
                     </div>
 
                     <div class="mt-8">
-                        <h2 id="filter-title" class="text-xl font-semibold mb-3 glowing-text-purple">Filter</h2>
+                        <h2 id="filter-title" class="text-2xl font-semibold mb-3 glowing-text-purple">Filter</h2>
                         <div id="filter-selector" class="flex justify-around items-center p-3 rounded-lg bg-neutral-900/50">
                             <!-- Filter buttons will be injected here -->
                         </div>
                     </div>
                 </div>
                  <div id="description-panel" class="glass-panel rounded-2xl p-6 flex-grow">
-                    <h3 class="font-bold text-lg mb-2 text-purple-300" id="description-title">Welcome</h3>
-                    <p id="description-text" class="text-neutral-300">Select a genre to get a recommendation, or enter "Free-Play" mode by changing the settings manually.</p>
+                    <h3 class="font-bold text-xl mb-2 text-purple-300" id="description-title">Welcome</h3>
+                    <p id="description-text" class="text-neutral-300 text-base leading-relaxed">Select a genre to get a recommendation, or enter "Free-Play" mode by changing the settings manually.</p>
                 </div>
             </div>
 
             <!-- Right Panel: Graph -->
             <div class="w-full lg:w-2/3 flex flex-col">
                 <div class="glass-panel rounded-2xl p-6 flex-grow">
-                    <h2 class="text-xl font-semibold mb-4 text-center">Frequency Response</h2>
+                    <h2 class="text-2xl font-semibold mb-4 text-center">Frequency Response</h2>
                     <div class="w-full h-80 lg:h-full">
                         <canvas id="freq-chart"></canvas>
                     </div>
@@ -156,7 +156,7 @@
     <script>
         // --- DATA ---
         const filterData = {
-            Black: { color: 0x444444, adjustment: 0, recommendedGenres: ["Classic Rock", "Blues", "Country"] },
+            Black: { color: 0x444444, adjustment: 0, recommendedGenres: ["Classic Rock", "Blues", "Country", "Pop"] },
             Silver: { color: 0xCCCCCC, adjustment: 6, recommendedGenres: ["Metal (Analysis)", "Classical"] },
             Blue: { color: 0x4169E1, adjustment: 3, recommendedGenres: ["Metal", "EDM/Electro"] },
             Gold: { color: 0xDAA520, adjustment: -3, recommendedGenres: ["Jazz", "Acoustic/Folk", "R&B"] },
@@ -165,6 +165,7 @@
 
         const genreData = {
             "Classic Rock": { filter: "Black", mode: "MONITOR", description: "A neutral profile that lets the classic mid-range tones of guitars and vocals shine through with authenticity." },
+            "Pop": { filter: "Black", mode: "POP", description: "A dynamic and punchy sound that makes vocals and modern production stand out with energy." },
             "Metal": { filter: "Blue", mode: "MONITOR", description: "For aggressive and complex instrumentation, the Blue filter in MONITOR mode provides a +3dB boost to the upper-midrange, enhancing the bite of distorted guitars and ensuring crisp drums." },
             "Desert Metal": { filter: "Blue", mode: "POP", description: "A powerful V-shape with enhanced mids brings out the sludgy, fuzzy guitar tones and heavy rhythm sections characteristic of the genre." },
             "Jazz": { filter: "Gold", mode: "MONITOR", description: "A relaxed upper-midrange allows for a smooth, natural presentation of horns, pianos, and vocals without any harshness." },
@@ -280,17 +281,16 @@
                     scales: {
                         x: {
                             grid: { color: 'rgba(255, 255, 255, 0.1)' },
-                            ticks: { color: '#a3a3a3' }
+                            ticks: { color: '#a3a3a3', font: { size: 14 } }
                         },
                         y: {
                             grid: { color: 'rgba(255, 255, 255, 0.1)' },
-                            ticks: { color: '#a3a3a3', stepSize: 5 },
-                            min: -10,
-                            max: 15,
+                            ticks: { color: '#a3a3a3', stepSize: 5, font: { size: 14 } },
                             title: {
                                 display: true,
                                 text: 'dB',
-                                color: '#a3a3a3'
+                                color: '#a3a3a3',
+                                font: { size: 16 }
                             }
                         }
                     }
@@ -342,7 +342,7 @@
                 const btn = document.createElement('button');
                 btn.textContent = name;
                 btn.id = `genre-${name.replace(/[/ ]/g, '-')}`;
-                btn.className = 'genre-btn p-2 rounded-lg bg-neutral-700/60 text-xs sm:text-sm';
+                btn.className = 'genre-btn p-2 rounded-lg bg-neutral-700/60 text-sm sm:text-base';
                 btn.onclick = () => selectGenre(name);
                 genreGrid.appendChild(btn);
             });
